# MemoreAI

./: .env.example  agents.py  app.py  bot-knowledge.py  botinfo.txt  config.py  notion_retrieval.py  pyproject.toml  requirements.txt  tools.py
TOOLS/: document_search_tool.py
bot_knowledge_db/: index.faiss  index.pkl
chroma_db/: chroma.sqlite3
db/: database.py  models.py
services/: chroma_service.py  chunking_service.py  document_service.py  embedding_service.py  ingestion_service.py  loader_service.py  metadata_service.py  web_search.py
