[project]
name = "whatsappgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "sympy>=1.14.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
