[project]
name = "whatsappgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pypdf>=6.13.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "sympy>=1.14.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
